--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -64,14 +64,33 @@ h1, h2, h3, h4, h5, h6 {
 a {
   text-decoration: none; }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 .wrapper {
   width: 100%;
+  min-width: 960px;
+  min-height: 100%;
+  position: relative;
   overflow: hidden; }
 
 .container {
   margin: 0 auto;
-  width: 1100px;
-  padding-left: 73px; }
+  max-width: 940px;
+  width: 95%;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .section {
   width: 100%;
@@ -85,35 +104,48 @@ a {
   font-weight: 700; }
 
 .header {
-  padding-top: 10px; }
-  .header::after {
-    content: "";
-    clear: both;
-    display: block; }
-
-.header__logo {
-  float: left;
-  width: 31%;
-  margin-right: 6px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 0.5625rem; }
 
 .header__navigation {
-  float: left;
-  padding-top: 30px;
-  margin-right: 3px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .nav__list {
   font-size: 0;
-  margin-right: 20px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-right: 0.9375rem; }
 
 .nav__item {
-  display: inline-block; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
   .nav__item:after {
     content: '';
     width: 4px;
     height: 4px;
     border-radius: 2px;
     background-color: #fff;
-    display: inline-block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-left: 15px;
     margin-right: 15px; }
   .nav__item:last-child:after {
@@ -127,112 +159,371 @@ a {
   letter-spacing: 0.06px;
   text-transform: uppercase; }
 
-.order {
-  padding-top: 20px; }
-
-.order__btn {
-  float: left;
-  width: 97px;
-  height: 35px;
-  border-radius: 6px;
-  font-size: 13px;
+.order-btn {
+  display: inline-block;
+  border-radius: 5px;
+  padding: 0.5625rem 1.0625rem;
+  font-size: 0.8125rem;
   color: #fff;
   text-transform: uppercase;
-  background-color: #e25028;
-  text-align: center;
-  line-height: 35px; }
-  .order__btn:hover {
+  background-color: #e25028; }
+  .order-btn:hover {
     background-color: #912e13; }
 
 .hello-block {
   background: url(../img/hello_section/video-bg.jpg) 0 0 no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.hello-block__inner-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
+
+.hello-block__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0.8;
+  -ms-flex: 0.8;
+  flex: 0.8; }
 
 .hello-block__content {
-  margin: 0 auto;
-  margin-bottom: 80px; }
-  .hello-block__content::after {
-    content: "";
-    clear: both;
-    display: block; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-left: 3%;
+  -ms-flex-item-align: center;
+  align-self: center; }
 
 .hello-block__pic-wrap {
   float: left;
   position: relative;
-  width: 47%;
-  padding-left: 24px; }
+  width: 50%; }
 
 .hello-block__picture {
-  width: 449px;
-  height: 414px; }
+  width: 100%; }
 
 .hello-block__slogan {
-  float: left;
-  width: 38%;
-  padding-top: 117px; }
+  width: 50%;
+  padding-top: 1.875rem; }
 
 .title--slogan {
-  color: #f8b43a;
-  margin-bottom: 10px; }
+  color: #f8b43a; }
 
 .slogan__text {
-  font-size: 65px;
+  font-size: 4.0625rem;
   font-family: "lifehack";
   color: #fff;
-  line-height: 61px; }
+  line-height: 0.98; }
 
 .forward-arrow {
-  text-align: center; }
+  position: absolute;
+  bottom: 9%;
+  left: 49.5%; }
 
 .best {
   background: url(../img/best_section/bg.jpg) 0 0 no-repeat;
-  background-size: cover;
-  padding-top: 120px; }
+  background-size: cover; }
 
 .title--best {
   text-align: center;
-  margin-bottom: 27px;
-  padding-right: 72px; }
+  margin-bottom: 1.875rem; }
 
 .best__list {
-  text-align: center;
-  padding-right: 73px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
 
 .best__item {
-  width: 32%;
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 10px; }
-  .best__item:last-child {
-    margin-right: 0; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  text-align: center;
+  width: calc(100%/3); }
 
 .best__item > div {
-  width: 100px;
-  height: 100px;
   text-align: center;
-  margin: 0 auto;
-  margin-bottom: 11px; }
+  height: 7.5rem; }
 
 .best__item h3 {
   font-family: "lifehack";
-  font-size: 25px;
-  margin-bottom: 10px;
-  line-height: 1.27; }
+  font-size: 1.5625rem;
+  line-height: 1.27;
+  margin-bottom: 0.8125rem; }
 
 .best__item p {
-  font-size: 14px;
+  margin: 0;
+  font-size: 0.875rem;
+  font-weight: 300;
   line-height: 1.7; }
 
+.team {
+  background: url(../img/team_section/team-bg.jpg) 0 0 no-repeat;
+  background-size: cover;
+  position: relative; }
+
+.team__right-col {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgba(47, 50, 52, 0.93);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.team__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 70%;
+  padding-left: 0.625rem; }
+
+.title--team {
+  color: #f8b43a;
+  margin-bottom: 1.5625rem; }
+
+.v-accordeon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.v-accordeon__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-bottom: 1.375rem; }
+
+.v-accordeon__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  height: 0; }
+
+.v-accordeon__item--active .v-accordeon__name {
+  color: #f8b43a; }
+  .v-accordeon__item--active .v-accordeon__name:before {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-bottom-color: #f8b43a;
+    border-top-width: 0;
+    margin-right: 0.3125rem; }
+
+.v-accordeon__item--active .v-accordeon__content {
+  min-height: 7.8125rem;
+  height: auto; }
+
+.v-accordeon__name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: 'gagalin';
+  font-size: 0.875rem;
+  color: #fff;
+  margin-bottom: 0.625rem; }
+  .v-accordeon__name:before {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-top-color: white;
+    border-bottom-width: 0;
+    margin-right: 0.3125rem; }
+
+.pic-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  background-color: #fff;
+  position: relative;
+  margin-right: 0.6875rem; }
+
+.content__img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
+
+.content__description {
+  text-align: left;
+  width: 60%; }
+
+.content__title {
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: 1rem; }
+
+.content__text {
+  font-size: 0.875rem;
+  font-weight: 300;
+  color: #fff;
+  line-height: 1.6; }
+
+.menu {
+  background: url(../img/menu_section/menu-bg.jpg) 0 0 no-repeat;
+  background-size: cover;
+  position: relative; }
+
+.title--menu {
+  position: absolute;
+  top: 13%;
+  left: 9%;
+  color: white; }
+
+.menu__right-col {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  height: 100%;
+  background-color: rgba(47, 50, 52, 0.93); }
+
+.h-accordeon {
+  height: 100%; }
+
+.h-accordeon__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  height: 100%; }
+
+.h-accordeon__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.h-accordeon__content {
+  width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+  padding-top: 10px; }
+
+.h-accordeon__content--active {
+  width: 540px;
+  white-space: normal; }
+
+.h-accordeon__title {
+  font-family: 'gagalin';
+  color: white;
+  -webkit-writing-mode: vertical-lr;
+  -ms-writing-mode: tb-lr;
+  writing-mode: vertical-lr;
+  -webkit-transform: rotate(-180deg);
+  -ms-transform: rotate(-180deg);
+  transform: rotate(-180deg);
+  width: 80px;
+  line-height: 100%;
+  font-size: 40px;
+  height: 100%;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  padding-top: 43px;
+  padding-left: 15px;
+  background-size: auto; }
+
+.h-accordeon__title--meat {
+  background: url(../img/menu_section/accord_meat.jpg) 0 0 no-repeat; }
+
+.h-accordeon__title--vegetarian {
+  background: url(../img/menu_section/accord_vegetarian.jpg) 0 0 no-repeat; }
+
+.h-accordeon__title--diet {
+  background: url(../img/menu_section/accord_diet.jpg) 0 0 no-repeat; }
+
 .feedback__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   width: 100%;
   font-size: 0; }
 
 .feedback__item {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   overflow: hidden;
   width: 25%;
   height: 50vh;
-  position: relative; }
+  position: relative;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); }
   .feedback__item:after {
     content: '';
     width: 100%;
@@ -261,57 +552,29 @@ a {
 .feedback__subtitle {
   font-size: 0.875rem;
   font-family: "gagalin";
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   color: #fff;
   text-transform: uppercase; }
 
 .feedback__text {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff;
   width: calc(210/275*100%);
   line-height: 1.72;
-  margin-bottom: 11px; }
+  margin-bottom: 0.6875rem; }
 
 .feedback__btn {
-  width: 110px;
-  height: 35px;
-  font-size: 13px;
+  display: inline-block;
+  padding: 0.625rem 0.9375rem;
+  font-size: 0.8125rem;
   background-color: #2f3234;
   border-radius: 5px;
   text-transform: uppercase;
   text-align: center;
   color: white;
-  font-weight: 500;
-  line-height: 35px;
-  cursor: pointer; }
+  font-weight: 500; }
   .feedback__btn:hover {
     background-color: black; }
-
-.feedback__avatar {
-  position: relative;
-  height: 100%;
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  z-index: 1; }
-
-.feedback__avatar--long {
-  width: 100%;
-  height: initial; }
-
-.feedback__avatar--pic3 {
-  right: 25%; }
-
-.feedback__avatar--pic4 {
-  right: 25%; }
-
-.feedback__avatar--pic5 {
-  right: 25%; }
-
-.feedback__avatar--pic6 {
-  bottom: 10%; }
-
-.feedback__avatar--pic7 {
-  right: 40%; }
 
 .pagination {
   position: fixed;
@@ -347,3 +610,112 @@ a {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     z-index: 10; }
+
+.order {
+  background: url(../img/order_section/order-bg.jpg) 0 0/cover no-repeat;
+  color: #fff; }
+
+.form__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.form__col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 50%;
+  margin-right: 20px; }
+  .form__col:last-child {
+    margin-right: 0; }
+
+.form__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.form__block {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  margin-right: 1.25rem; }
+  .form__block:last-child {
+    margin-right: 0; }
+
+.form__input {
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  width: 100%; }
+  .form__input--textarea {
+    height: 100px;
+    resize: none; }
+
+.form__radio-lbl {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+  align-content: center; }
+
+.form__custom-radio {
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: #fff;
+  position: relative; }
+
+.form__radio {
+  position: absolute;
+  left: -999999px; }
+  .form__radio:checked ~ .form__custom-radio:after {
+    content: '';
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    background-color: #e25028;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+
+.form__custom-check {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  background-color: #fff;
+  position: relative; }
+
+.form__check {
+  position: absolute;
+  left: -99999px; }
+  .form__check:checked + .form__custom-check::after {
+    content: '';
+    display: block;
+    height: 7px;
+    width: 10px;
+    border-left: 4px solid #e25028;
+    border-bottom: 4px solid #e25028;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -60%) rotate(-45deg);
+    -ms-transform: translate(-50%, -60%) rotate(-45deg);
+    transform: translate(-50%, -60%) rotate(-45deg); }
+
+.button {
+  border: 0;
+  cursor: pointer; }
+
+.reset-btn {
+  background: transparent;
+  color: white; }
+
+/*# sourceMappingURL=main.css.map */
