--- a/css/main.css
+++ b/css/main.css
@@ -78,14 +78,15 @@ table {
 
 .wrapper {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden; }
 
 .main-content {
   position: absolute;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  min-height: 650px;
   top: 0;
   -webkit-transition: .3s top;
   -o-transition: .3s top;
