--- a/scss/layout/adjustments.scss
+++ b/scss/layout/adjustments.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     position: relative;
     overflow: hidden;
 }
@@ -8,7 +8,8 @@
 .main-content {
     position: absolute;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
+    min-height: 650px;
     top: 0;
     transition: .3s top;
 }
