--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,9 @@ table {
   width: 100%;
   height: 100vh;
   min-height: 650px; }
+  @media screen and (max-width: 768px) {
+    .section {
+      min-height: 0; } }
 
 .title {
   font-size: 4.5rem;
