--- a/scss/layout/adjustments.scss
+++ b/scss/layout/adjustments.scss
@@ -33,6 +33,10 @@
     width: 100%;
     height: 100vh;
     min-height: 650px;
+
+    @include tablets {
+        min-height: 0;
+    }
 }
 
 .title {
