--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ table {
   height: 100%;
   min-height: 650px;
   top: 0;
+  will-change: top;
   -webkit-transition: .3s top;
   -o-transition: .3s top;
   transition: .3s top; }
@@ -1409,11 +1410,11 @@ table {
   position: absolute;
   top: 10%;
   left: 0%; }
-  @media screen and (min-width: 769) {
+  @media screen and (min-width: 769px) {
     .ingredients:hover .ingredients__dropdown {
       opacity: 1;
       z-index: 10; } }
-  @media screen and (min-width: 769) {
+  @media screen and (min-width: 769px) {
     .ingredients:hover .ingredients__pic-wrap {
       background: #e35028; } }
   @media screen and (max-width: 768px) {
