--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -88,9 +88,10 @@ table {
   height: 100%;
   min-height: 650px;
   top: 0;
-  -webkit-transition: .3s top;
-  -o-transition: .3s top;
-  transition: .3s top; }
+  will-change: top;
+  -webkit-transition: .1s;
+  -o-transition: .1s;
+  transition: .1s; }
 
 .container {
   margin: 0 auto;
@@ -116,6 +117,9 @@ table {
   width: 100%;
   height: 100vh;
   min-height: 650px; }
+  @media screen and (max-width: 768px) {
+    .section {
+      min-height: 0; } }
 
 .title {
   font-size: 4.5rem;
@@ -1051,7 +1055,6 @@ table {
   font-weight: 300; }
 
 .map {
-  background: url(../img/map_section/map-bg.jpg) center center/cover no-repeat;
   position: relative; }
 
 .footer {
@@ -1188,7 +1191,7 @@ table {
     border-radius: 4px;
     background-color: #fff; }
 
-.pagination__link--active:after {
+.pagination__item--active .pagination__link:after {
   content: '';
   display: block;
   position: absolute;
@@ -1406,11 +1409,11 @@ table {
   position: absolute;
   top: 10%;
   left: 0%; }
-  @media screen and (min-width: 769) {
+  @media screen and (min-width: 769px) {
     .ingredients:hover .ingredients__dropdown {
       opacity: 1;
       z-index: 10; } }
-  @media screen and (min-width: 769) {
+  @media screen and (min-width: 769px) {
     .ingredients:hover .ingredients__pic-wrap {
       background: #e35028; } }
   @media screen and (max-width: 768px) {
