--- a/dev/scss/blocks/menu.scss
+++ b/dev/scss/blocks/menu.scss
@@ -5,12 +5,13 @@
 
 .title--menu {
     position: absolute;
-    top: 10%;
+    top: 13%;
     left: 9%;
     color: white;
 
     @include tablets {
         left: 3%;
+        top: 9%;
     }
     
     @include phones {
@@ -163,7 +164,7 @@
     transform-origin: 0 0;
     left: 50%;
     top: 100%;
-    margin-top: -20px;
+    margin-top: rem(-35px);
     z-index: 10;
 
     @include phones {
